# Limit-order-book-matching-engine

./: .gitignore  CMakeLists.txt  README.md
bench/: benchmark.cpp
data/: orders.csv  sample_orders.csv
include/nanomatch/: csv_reader.hpp  matcher.hpp  memory_pool.hpp  order.hpp  order_book.hpp  order_book_stl.hpp  spsc_ring.hpp  timing.hpp  types.hpp
src/: csv_reader.cpp  main.cpp  matcher.cpp  order_book.cpp  order_book_stl.cpp
tests/: test_order_book.cpp
tools/: generate_orders.py  plot_latency.py
